# akri-on-krustlet

./: .gitmodules  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  demo-krustlet.md  demo-kubelet.md  demo.md
deployment/: bootstrap.sh  debug-echo-configuration.yaml  debug_echo_configuration.yaml  demonset.yaml  gRPC_proxy.yaml  krustlet_setup.sh  pod_using_wde.yaml  wasi_debug_echo.yaml  wasm_pod_using_wde.yaml  wde-pod.yaml
dh-grpc-proxy/: Cargo.toml  Dockerfile.discovery-handler  README.md
dh-grpc-proxy/src/: discovery_handler.rs  discovery_support.rs  main.rs  marshallers.rs
dh-grpc-proxy/src/discovery_support/: onvif_discover.rs
dh-grpc-proxy/src/marshallers/: discover_response_marshaller.rs
hello-world/: Cargo.toml
hello-world/src/: main.rs
wasi-debug-echo/: Cargo.toml
wasi-debug-echo/src/: main.rs
wasi-debug-echo/src/models/: device.rs  request.rs
wasi-hello-world/: Cargo.toml
wasi-hello-world/src/: main.rs
wasi-onvif/: Cargo.toml
wasi-onvif/src/: discovery.rs  main.rs  models.rs
wasi-onvif/src/discovery/: discovery_impl.rs  discovery_utils.rs  marshaller.rs
wasi-onvif/src/models/: device.rs  request.rs
wasi-udev/: Cargo.toml
wasi-udev/src/: main.rs  models.rs
wasi-udev/src/models/: wrappers.rs
wde-grpc-proxy/: README.md
wde-grpc-proxy/src/: discovery_handler.rs  main.rs  marshallers.rs
wde-grpc-proxy/src/marshallers/: discover_response_marshaller.rs
wde-hello-world/src/: main.rs
