[package]
name = "dh-grpc-proxy"
version = "0.1.0"
authors = ["rodz <rodrigo.f.rodrigues@hotmail.com>"]
edition = "2018"

[dependencies]
# TODO: Change this to Akri main when the library is merged
akri-discovery-utils = { git = "https://github.com/deislabs/akri", branch = "main", package = "akri-discovery-utils" }
anyhow = "1.0.38"
async-trait = "0.1.0"
tokio = { version = "0.2", features = ["rt-threaded", "sync", "time", "stream", "fs", "macros", "uds"] }
tonic = {version = "0.1.0", features = ["tls"] }
serde = { version = "1.0.104", features = ["derive"]}
serde_json = "1.0.45"
serde_yaml = "0.8.11"
serde_derive = "1.0.104"
futures = "~0.3"
protobuf = { version = "2.9.0", features = ["with-serde"] }
grpc = "0.8.3"
log = "0.4"
tonic-build = "0.1.1"
uuid = { version = "0.8.1", features = ["v4"] }
xml-rs = { version = "0.8.0" }
yaserde = "0.6.0"
yaserde_derive = "0.6.0"
