[package]
name = "wasi-udev"
version = "0.1.0"
authors = ["rodz <rodrigo.f.rodrigues@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
pest_derive = "2.0"
prost = "0.6"
regex = "1"
log = "0.4"
serde = { version = "1.0.104", features = ["derive"]}
serde_json = "1.0.45"
serde_yaml = "0.8.11"
serde_derive = "1.0.104"
libudev = "0.3.0"
tokio = { version = "1.6.0", features = ["sync", "time", "rt", "fs", "macros"] }
